Add styling to header and footer

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -5,4 +5,5 @@ $flickr-black: #000000;
 $flickr-white: #FFFFFF;
 
 $color-background: $flickr-white;
+$color-link: $flickr-blue;
 $color-highlight: $flickr-pink;
