--- a/src/scss/modules/_footer.scss
+++ b/src/scss/modules/_footer.scss
@@ -1,3 +1,9 @@
 .footer {
-
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.footer-link {
+  color: $color-link;
+  text-decoration: none;
 }
