Style header elements

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -7,3 +7,13 @@ $flickr-white: #FFFFFF;
 $color-background: $flickr-white;
 $color-link: $flickr-blue;
 $color-highlight: $flickr-pink;
+$color-input: #EEEEEE;
+$color-input-submit: $flickr-blue;
+$color-input-submit-hover: $flickr-pink;
+$color-input-submit-text: $flickr-white;
+$color-input-underline: #CCCCCC;
+$color-input-underline-focus: $flickr-blue;
+
+$radius-input: 4px;
+$logo-width: 127px;
+$logo-height: 39px;
