Pipe flickr response into components

--- a/src/scss/modules/_photo.scss
+++ b/src/scss/modules/_photo.scss
@@ -1,7 +1,13 @@
 .photo {
 
 }
-.photo-list{
+.photo-list {
+  display: block;
   box-sizing: border-box;
   padding: 20px 0;
+}
+.photo-thumb {
+  display: inline-block;
+  float: left;
+  line-height: 0;
 }
