--- a/src/scss/modules/_photo.scss
+++ b/src/scss/modules/_photo.scss
@@ -2,10 +2,28 @@
 
 }
 .photo-list {
-  display: block;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   margin: 20px 0;
   box-sizing: border-box;
+  overflow: hidden;
+}
+.photo-list-content {
+  position: relative;
+  display: block;
   overflow: scroll;
+}
+.photo-list-loading-strip {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+  background: rgba($color-input, .5);
+  text-align: center;
+  line-height: 100px;
+  color: $color-highlight;
 }
 .photo-list-photos {
   margin: 0 auto;
