--- a/src/scss/modules/_photo.scss
+++ b/src/scss/modules/_photo.scss
@@ -1,6 +1,24 @@
 .photo {
 
 }
+.photo-preview{
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba($flickr-white, .5);
+}
+.photo-preview-content{
+  max-width: 80%;
+  height: auto;
+  padding: 20px;
+  background: $flickr-white;
+  box-shadow: 4px 4px 10px rgba($flickr-black, .6)
+}
 .photo-list {
   position: relative;
   display: flex;
@@ -27,11 +45,11 @@
 }
 .photo-list-photos {
   margin: 0 auto;
+  text-align: center;
 }
 
 .photo-list-thumb {
   display: inline-block;
-  float: left;
   width: 150px;
   height: 150px;
   margin: 0 10px 10px 0;
